--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -10,3 +10,45 @@
   --color-graySidebarText: #60626e;
 
 }
+
+
+@keyframes gradient-flow {
+  0% {
+    background-position: 0% 50%;
+  }
+  25% {
+    background-position: 50% 100%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  75% {
+    background-position: 50% 0%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animate-gradient {
+  background-size: 500% 500%; /* bigger = smoother blending */
+  animation: gradient-flow 16s ease infinite;
+}
+
+@keyframes glow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animate-glow {
+  background-size: 300% 300%;
+  animation: glow 6s ease infinite;
+  filter: drop-shadow(0 0 12px rgba(255, 100, 150, 0.6));
+}
